--- a/vue-styled-component-avancado/package.json
+++ b/vue-styled-component-avancado/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "netflix",
-  "description": "teste netflix",
+  "name": "styled-component",
+  "description": "A Vue.js project",
   "version": "1.0.0",
   "author": "Renato Freitas <renatjf@gmail.com>",
   "license": "MIT",
@@ -11,8 +11,7 @@
   },
   "dependencies": {
     "vue": "^2.5.11",
-    "vue-paginate": "^3.6.0",
-    "vue-resource": "^1.5.1"
+    "vue-styled-components": "^1.4.9"
   },
   "browserslist": [
     "> 1%",
@@ -27,7 +26,7 @@
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.4",
-    "node-sass": "^4.5.3",
+    "node-sass": "^4.12.0",
     "sass-loader": "^6.0.6",
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
