--- a/vue-cssgrid/package.json
+++ b/vue-cssgrid/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "testes-vue",
+  "name": "vue-cssgrid",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^1.10.6",
+    "babel-polyfill": "^6.26.0",
     "core-js": "^2.6.5",
+    "es6-promise": "^4.2.8",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
@@ -22,9 +25,9 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "iconfont-webpack-plugin": "^4.2.1",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.1.0",
+    "vue-styled-components": "^1.4.9",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
@@ -48,6 +51,7 @@
   },
   "browserslist": [
     "> 1%",
-    "last 2 versions"
+    "last 2 versions",
+    "ie >= 11"
   ]
 }
